--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
     <div class="container">
       <div class="screen"></div>
       <div class="buttons">
-        <div class="cont cont1">AC</div>
-        <div class="cont cont2"><i class="fa-solid fa-plus-minus"></i></div>
-        <div class="cont cont3">%</div>
-        <div class="cont cont4"><i class="fa-solid fa-divide"></i></div>
-        <div class="cont cont5">7</div>
-        <div class="cont cont6">8</div>
-        <div class="cont cont7">9</div>
-        <div class="cont cont8">X</div>
-        <div class="cont cont9">4</div>
-        <div class="cont cont10">5</div>
-        <div class="cont cont11">6</div>
-        <div class="cont cont12">-</div>
-        <div class="cont cont13">1</div>
-        <div class="cont cont14">2</div>
-        <div class="cont cont15">3</div>
-        <div class="cont cont16">+</div>
-        <div class="cont cont17">0</div>
-        <div class="cont cont18">.</div>
-        <div class="cont cont19">=</div>
+        <div class="cont cont1"> <a href="#">AC</a></div>
+        <div class="cont cont2"> <a href="#"><i class="fa-solid fa-plus-minus"></i></a> </i></div>
+        <div class="cont cont3">  <a href="#">%</a> </div>
+        <div class="cont cont4">  <a href="#"><i class="fa-solid fa-divide"></i></a>  </div>
+        <div class="cont cont5"> <a href="#">7</a> </div>
+        <div class="cont cont6"> <a href="#">8</a> </div>
+        <div class="cont cont7"> <a href="#">9</a> </div>
+        <div class="cont cont8"> <a href="#">X</a> </div>
+        <div class="cont cont9"> <a href="#">4</a> </div>
+        <div class="cont cont10"> <a href="#">5</a> </div>
+        <div class="cont cont11"> <a href="#">6</a> </div>
+        <div class="cont cont12"> <a href="#">-</a> </div>
+        <div class="cont cont13"> <a href="#">1</a> </div>
+        <div class="cont cont14"> <a href="#">2</a> </div>
+        <div class="cont cont15"> <a href="#">3</a> </div>
+        <div class="cont cont16"> <a href="#">+</a> </div>
+        <div class="cont cont17"> <a href="#">0</a> </div>
+        <div class="cont cont18"> <a href="#">.</a> </div>
+        <div class="cont cont19"> <a href="#">=</a> </div>
       </div>
     </div>
   </body>
